# shopmind

./: .env.example  .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
src/: __init__.py  agent.py  config.py  logger.py  models.py  tools.py
src/shopmind/: agent.py  config.py  crew.py  logger.py  main.py  models.py  seeder.py
src/shopmind/config/: agents.yaml  profiling.yaml  search_config.yaml  seed_agents.yaml  seed_tasks.yaml
src/shopmind/tools/: tools.py
