[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shopmind"
version = "0.1.0"
description = "An AI-powered shopping assistant agent"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.45.0",
    "langgraph>=0.2.0",
    "chromadb>=0.6.0",
    "tavily-python>=0.5.0",
    "pydantic>=2.10.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.pyright]
pythonVersion = "3.13"
venvPath = "."
venv = ".venv"
